# dawnchat-plugins

./: .gitignore  .gitmodules  README.md
official-plugins/comfyui/: README.md  manifest.json  pyproject.toml
official-plugins/comfyui/patches/: comfyui.patch
official-plugins/comfyui/scripts/: apply-local-diff.sh  sync-custom-nodes.sh  upstream-sync.sh
official-plugins/comfyui/src/: main.py
official-plugins/comfyui/src/comfyui_plugin/: client.py  manager.py  model_management.py  tools.py
official-plugins/comfyui/src/comfyui_wrapper/: __init__.py  server_launcher.py
official-plugins/comfyui/tests/: test_mcp_async_router.py
official-plugins/comfyui/web/: index.html
official-plugins/comfyui/web-src/: package.json  pnpm-lock.yaml
official-plugins/comfyui/web-src/src/: App.vue
official-plugins/comfyui/web/assets/: index-XX43oCMR.js  index-h0dcHUFG.css
official-plugins/cosyvoice/: README.md  manifest.json  pyproject.toml
official-plugins/cosyvoice/patches/: cosyvoice.patch
official-plugins/cosyvoice/scripts/: apply-local-diff.sh  upstream-sync.sh
official-plugins/cosyvoice/src/: main.py  mcp.py
official-plugins/cosyvoice/src/cosyvoice_plugin/: handlers.py  model_management.py
official-plugins/cosyvoice/src/cosyvoice_worker/: engine.py  server.py
official-plugins/cosyvoice/tests/: test_mcp_async_router.py
official-plugins/cosyvoice/web/: index.html
official-plugins/cosyvoice/web-src/: package.json  vite.config.js
official-plugins/cosyvoice/web-src/src/: App.vue
official-plugins/cosyvoice/web/assets/: index-CS8nrzJJ.js  index-NIokMwCO.css
official-plugins/diarization/: manifest.json  pyproject.toml
official-plugins/diarization/src/: diarization_service.py  main.py
official-plugins/diarization/tests/: test_mcp_async_router.py
official-plugins/echoflow/: manifest.json  pyproject.toml
official-plugins/echoflow/assets/: common_words_rows.csv
official-plugins/echoflow/src/: __init__.py  i18n.py  main.py
official-plugins/echoflow/src/audio/: __init__.py  recorder.py  vad.py
official-plugins/echoflow/src/course/: __init__.py  importer.py  models.py  segmenter.py
official-plugins/echoflow/src/lexicon/: __init__.py  lexicon_db.py
official-plugins/echoflow/src/locales/: en.json  zh.json
official-plugins/echoflow/src/scoring/: __init__.py  aligner.py  phoneme.py  scorer.py
official-plugins/echoflow/src/services/: coach_engine.py  indexer_service.py  library_service.py  narrator.py  planner.py  pregen.py  word_search_service.py
official-plugins/echoflow/src/storage/: __init__.py  course_db.py  library_repo.py  occurrence_repo.py  repos.py  schema_v1.py  sqlite.py
official-plugins/echoflow/src/ui/: __init__.py  dashboard.py  dashboard_course_grid.py  import_modal.py  library_import_modal.py  library_page.py  practice.py  practice_bottom_bar.py  practice_page_head.py  practice_score_panel.py  practice_scoring.py  practice_v2_helpers.py  report.py  settings_page.py  v2_timeline_demo.py  word_detail_page.py  words_page.py
official-plugins/echoflow/src/v2/: __init__.py  mock.py  models.py  runtime.py  versions.py
official-plugins/echoflow/tests/: test_llm_script_gen_parse.py  test_pipeline_llm_only.py  test_short_utterance_relabel_logic.py  test_speaker_frame_extraction_sampling.py  test_unified_events_ids.py
official-plugins/hello-asr-vue/: manifest.json  pyproject.toml
official-plugins/hello-asr-vue/src/: main.py
official-plugins/hello-asr-vue/tests/: test_api_asr_jobs.py
official-plugins/hello-asr-vue/web/: app.js  index.html  styles.css
official-plugins/hello-asr-vue/web-src/: index.html  package.json  pnpm-lock.yaml  vite.config.js
official-plugins/hello-asr-vue/web-src/src/: App.vue  styles.css
official-plugins/hello-asr-vue/web/assets/: index-3HyevaWT.js  index-BjUBf2Um.css  index-DI8SZxrW.css  (+3 more)
official-plugins/hello-tts/: manifest.json  pyproject.toml
official-plugins/hello-tts/src/: i18n.py  main.py
official-plugins/hello-world/: manifest.json  pyproject.toml
official-plugins/hello-world-nice-ui/: manifest.json  pyproject.toml
official-plugins/hello-world-nice-ui/src/: main.py
official-plugins/hello-world-sdk/: manifest.json  pyproject.toml
official-plugins/hello-world-sdk/src/: __init__.py  main.py
official-plugins/hello-world-vue/: manifest.json  pyproject.toml
official-plugins/hello-world-vue/src/: main.py
official-plugins/hello-world-vue/tests/: test_mcp_async_router.py
official-plugins/hello-world-vue/web/: index.html
official-plugins/hello-world-vue/web-src/: package.json
official-plugins/hello-world/src/: __init__.py  app.py  main.py
official-plugins/image-gen/: manifest.json  pyproject.toml
official-plugins/image-gen/src/: i18n.py  main.py
official-plugins/smart-reader/: README.md  manifest.json  pyproject.toml
official-plugins/smart-reader/data/: library.json
official-plugins/smart-reader/src/: main.py
official-plugins/smart-reader/web/: index.html
official-plugins/smart-reader/web-src/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
official-plugins/vibevoice/: README.md  manifest.json  pyproject.toml
official-plugins/vibevoice/patches/: vibevoice.patch
official-plugins/vibevoice/scripts/: apply-local-diff.sh  upstream-sync.sh
official-plugins/vibevoice/src/: main.py
official-plugins/vibevoice/tests/: test_mcp_async_router.py
official-plugins/vibevoice/web/: index.html
official-plugins/vibevoice/web-src/: index.html  package.json  pnpm-lock.yaml
sdk/: README.md  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
sdk/dawnchat_sdk/: __init__.py  api_router.py  cards.py  download_task_store.py  host.py  host_capabilities.py  host_client.py  host_exceptions.py  host_transport.py  logging.py  mcp_router.py  model_artifacts.py  model_downloads.py  plugin.py  plugin_data.py  result_utils.py  task_handle.py  tool_errors.py  tool_gateway.py
sdk/dawnchat_sdk/ui/: __init__.py  components.py  theme.py
sdk/tests/: test_asr_capability_plugin_diarization.py  test_result_utils.py  test_tool_gateway.py
(+208 files in other folders)
