[project]
name = "dawnchat-sdk"
version = "1.0.0"
description = "DawnChat Plugin SDK - Build plugins for the DawnChat platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DawnChat Team", email = "team@dawnchat.dev"},
]
keywords = ["dawnchat", "plugin", "sdk", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "nicegui"
]

[project.optional-dependencies]
gradio = [
    "gradio>=4.0.0",
]
nicegui = [
    "nicegui>=3.0.0",
]
# WebSocket support for long-running async tasks
async = [
    "websockets>=12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dawnchat_sdk"]

