[project]
name = "dawnchat-comfyui-plugin"
version = "1.0.0"
description = "ComfyUI image generation plugin"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.11.8",
    "comfyui-frontend-package==1.34.9",
    "comfyui-workflow-templates==0.7.59",
    "comfyui-embedded-docs==0.3.1",
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.50.3",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "yarl>=1.18.0",
    "pyyaml",
    "Pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
    "kornia>=0.7.1",
    "spandrel",
    "pydantic~=2.0",
    "pydantic-settings~=2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
