[project]
name = "dawnchat-cosyvoice-plugin"
version = "1.0.0"
description = "CosyVoice TTS plugin"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.30.0",
    "pydantic==2.7.0",
    "numpy==1.26.4",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "transformers==4.51.3",
    "modelscope==1.20.0",
    "hyperpyyaml==1.2.2",
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "onnx==1.16.0",
    "onnxruntime==1.18.0",
    "openai-whisper==20231117",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "networkx==3.1",
    "protobuf==4.25.0",
    "pyarrow==18.1.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "scipy==1.11.4",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    "tiktoken==0.8.0",
    "wetext==0.0.4",
    "tqdm==4.66.0",
    "wget==3.2",
    "x-transformers==2.11.24"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
