[project]
name = "echoflow"
version = "1.0.0"
description = "English pronunciation training plugin for DawnChat"
requires-python = ">=3.10"
dependencies = [
    "nicegui>=3.0.0",
    "dawnchat-sdk",
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "g2p-en>=2.1.0",
    "nltk<3.9",
    "pysrt>=1.1.2",
    "webvtt-py>=0.5.1",
    "pysubs2>=1.6.0",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

