[project]
name = "hello-world-sdk"
version = "1.0.0"
description = "A demo plugin showcasing DawnChat SDK capabilities"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.0.0",
    "dawnchat-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
