[project]
name = "hello-world"
version = "1.0.0"
description = "A simple Hello World plugin for DawnChat"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

