[project]
name = "dawnchat-vibevoice-plugin"
version = "1.0.0"
description = "VibeVoice TTS plugin"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "torch",
    "accelerate==1.6.0",
    "transformers==4.51.3",
    "datasets==3.5.0",
    "peft",
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio==5.50.0",
    "av",
    "aiortc"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
